--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,4 @@
-/*!
-    Title: Dev Portfolio Template
-    Version: 1.2.2
-    Last Change: 03/25/2020
-    Author: Ryan Fitzgerald
-    Repo: https://github.com/RyanFitzgerald/devportfolio-template
-    Issues: https://github.com/RyanFitzgerald/devportfolio-template/issues
 
-    Description: This file contains all the styles associated with the page
-    that don't come from third party libraries. This file gets compiled using
-    Gulp and send to the /css folder which is then loaded on the page.
-*/
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
@@ -179,7 +168,7 @@ header.sticky {
     position: fixed;
     right: 15px;
     top: 10px;
-    color: #3498db;
+    /*color: #3498db;*/
     font-size: 1.5em;
     z-index: 20;
     padding: 0 7px;
@@ -196,7 +185,7 @@ header.sticky {
     padding-right: 15px;
     padding-top: 10px;
     cursor: pointer;
-    color: #3498db
+    /*color: #3498db*/
 }
 
 #mobile-menu-close span {
@@ -208,9 +197,9 @@ header.sticky {
     vertical-align: middle
 }
 
-/*footer {*/
-/*    padding: 0 0*/
-/*}*/
+footer {
+    padding: 2em;
+}
 
 .copyright {
     padding-top: 20px
