--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ footer {
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
-    background-color: #090808;
+    /*background-color: #090808;*/
     /*background: url(../images/bg.jpg);*/
     background-size: cover;
     padding: 15px;
@@ -315,8 +315,9 @@ footer {
 
 #lead-content {
     position: absolute;
+    width: 100%;
     z-index: 10;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center
@@ -417,14 +418,14 @@ footer {
     color: #acc3f3
 }
 
-#about p {
-    color: #fcfcfc;
-    margin: 0;
-    font-size: 0.9em;
-    width: 50%;
-    text-align: left;
+/*#about p {*/
+/*    color: #fcfcfc;*/
+/*    margin: 0;*/
+/*    font-size: 0.9em;*/
+/*    width: 50%;*/
+/*    text-align: left;*/
 
-}
+/*}*/
 
 #experience {
     padding: 50px 15px;
@@ -528,7 +529,7 @@ footer {
     left: 0;
     top: 10px;
     font-weight: 300;
-    color: #374054
+    color: #acc3f3
 }
 
 #education {
@@ -924,4 +925,15 @@ footer {
     border-radius: 50%;
 
     object-fit: cover;
+}
+.hero-body {
+    position: relative;
+    width: 100%;
+}
+#tsparticles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
