--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Raleway', Arial， sans-serif;
     font-size: 16px;
 }
 
@@ -342,7 +342,7 @@ footer {
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 15px;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.05em;
     font-family: 'Raleway', Arial, sans-serif;
 }
 
@@ -418,14 +418,15 @@ footer {
     color: #acc3f3
 }
 
-/*#about p {*/
-/*    color: #fcfcfc;*/
-/*    margin: 0;*/
-/*    font-size: 0.9em;*/
-/*    width: 50%;*/
-/*    text-align: left;*/
+#about p {
+    font-family: 'Raleway', Arial， sans-serif;
+    color: rgba(93, 227, 227, 0.89);
+    font-size: 1em;
+    font-weight: normal;
+    letter-spacing: 0.05em;
+    text-align: left;
 
-/*}*/
+}
 
 #experience {
     padding: 50px 15px;
@@ -920,8 +921,8 @@ footer {
 
 .user {
     display: inline-block;
-    width: 180px;
-    height: 180px;
+    width: 240px;
+    height: 240px;
     border-radius: 50%;
 
     object-fit: cover;
@@ -936,4 +937,15 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+#instructions {
+    position: absolute;
+    color: #666;
+    bottom: 0;
+    padding-bottom: 6px;
+    font-family: sans-serif;
+    width: 100%;
+    text-align: center;
+    pointer-events: none;
 }
