--- a/css/styles.css
+++ b/css/styles.css
@@ -415,7 +415,7 @@ footer {
 }
 
 #about h2 {
-    color: #acc3f3
+    color: #fff
 }
 
 #about p {
@@ -435,7 +435,7 @@ footer {
 }
 
 #experience h2 {
-    color: #acc3f3
+    color: #fff
 }
 
 #experience-timeline {
