--- a/templates/works.html
+++ b/templates/works.html
@@ -88,8 +88,8 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
-                      <h3>OpenAI SSE (Server-Sent Events) Streaming API</h3>
-                      <p>a chatbot to stream the response to your application in real-time</p>
+                      <h3>TBD</h3>
+                      <p>TBD</p>
                       <a href="./work2.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -99,8 +99,8 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
-                      <h3>Vivamus vestibulum</h3>
-                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                      <h3>TBD</h3>
+                      <p>TBD</p>
                       <a href="./work3.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -117,8 +117,8 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>TBD</h3>
+                      <p>TBD</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -128,8 +128,8 @@
                     </a>
                     <div class="card-container">
                       <h4>005/006</h4>
-                      <h3>Fringilla sit amet</h3>
-                      <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                      <h3>TBD</h3>
+                      <p>TBD</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -140,8 +140,8 @@
                     </a>
                     <div class="card-container">
                       <h4>006/006</h4>
-                      <h3>Vivamus vestibulum</h3>
-                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                      <h3>TBD</h3>
+                      <p>TBD</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
