--- a/templates/work1.html
+++ b/templates/work1.html
@@ -114,16 +114,12 @@
           <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">001 : GPT API Chat</h1>
+              <h1 class="h2">001 : Robo Chat</h1>
             </div>
             <p>This is a simple chatbot that uses OpenAI's GPT-3.5-turbo language model to generate responses to user
               input.</p>
-            <!-- <blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-              <small class="pull-right">Irina Martin</small>
-            </blockquote> -->
             <div class="chat-container">
-              <form id="chat-form">
+              <form id="chat-form"  autocomplete="off">
                 <input type="text" id="user-input" name="user_input" placeholder="Type your message..." />
                 <button type="submit" id="submitBtn">Send</button>
               </form>
